[package]
name = "mechania-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.31.0"
regex = "1"
sqlx = { version = "0.6.2", features = [ "bigdecimal","macros","runtime-tokio-native-tls", "mysql", "time" ] }
axum-macros = "0.3.7"
axum = "0.6.16"
env_logger = "0.10.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
serde_json = "1.0.96"
http = "0.2.9"
redis ={version = "0.23.0", features = ["json"]}
uuid = {version ="1.3.2", features = ["fast-rng", "v4"]}
reqwest = { version = "0.11", features = ["json"] }
quick-xml = "0.28.2"
num-traits = "0.2.15"
